Media Query Adjusted

--- a/alltrails/index.html
+++ b/alltrails/index.html
@@ -77,15 +77,15 @@
 
     <!--body1-->
     <div class="container_body">
-      <p class="container-body-description">GARDENERS HUB</p>
+      <p class="container-body-description">ADDED A COMPARISON FEATURE ON ALLTRAILS MOBILE APP</p>
       <br>
-      <p class="text-body-description">Gardeners hub helps the local community developing a
-        horticultural marketplace and a relationship between gardeners
+      <p class="text-body-description">Adding feature on All Trails mobile app to help user planning
+        their hiking trip
       </p>
 
       <br>
       <div class="container-body-project-img">
-        <img src="./gardenershub.png" alt="DIAGRAM" class="image">
+        <img src="./alltrails.png" alt="DIAGRAM" class="image">
       </div>
 
       <br>
@@ -121,14 +121,9 @@
 
 
         <p class="text-body-description">
-          Gardeners Hub Application aims to build the <strong>local market network</strong> and
-          improve the
-          <strong>horticultural experience</strong> by offering more comprehensive local market
-          networking opportunities to the
-          gardeners that result in reducing wasting resources and preventing establishment failure
-          by improving learning and sharing experience.
-          An overwhelming of resources and misunderstanding that result in failure horticultural
-          experience by those involved in the horticultural process.
+          one of the all trial section of the mobile app calls "plan", but the user flow to compare
+          major facts are way more complicated, such as the distance between the trailhead to home,
+          how long can we get there, the details on that trails, etc.
 
         </p>
 
@@ -143,11 +138,9 @@
 
       <div class="container-body-project">
 
-        <p class="text-body-description">Gardeners' Hub provides <strong> a local marketplace
-            platform</strong> to
-          help gardeners reduce wasting resources and <strong>a regional social network</strong>
-          with the local
-          community.</p>
+        <p class="text-body-description">adding comparison feature on that plan section, then people
+          can see all facts on one page instead of back and forth to check those details including
+          driving distance, trail elevation, etc.</p>
         <br>
 
 
@@ -371,7 +364,8 @@
       <div class="container-body-project">
         <p class="text-body-description"> Growing vegetables and house plants are more popular
           recently. Instead of shopping at the grocery store or shopping mall is more convenient to
-          have house plants and fresh vegetables at home during this pandemic. Base on the necessity, this
+          have house plants and fresh vegetables at home during this pandemic. Base on the
+          necessity, this
           project focuses on developing a local marketplace platform that helps gardens share
           plants/tools and horticulture experiences. The goal is to help all gardeners get a good
           horticulture experience by engaging in horticulture events locally. </p>
