--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       alt="DRAWING OF KAPPE RAY HOUSE" class="image-hover">
     </div>
     <div class="image-text-hover">
-      <div><a href="/gardeners_hub">GARDENERS HUB</a></div>
+      <a href="/gardeners_hub" id="gardeners-hub">GARDENERS HUB</a>
     </div>
   </div>
   <div>
@@ -95,7 +95,7 @@
       alt="Urban Backyard" class="image-hover">
     </div>
     <div class="image-text-hover">
-      <div><a href="/meal_planner">MEAL PLANNER</a></div>
+      <a href="/meal_planner" id="meal-planner">MEAL PLANNER</a>
     </div>
   </div>
   <div>
@@ -111,7 +111,27 @@
   <hr>
 
 
+<!--body3-->
+<div class="container_body">
+  <div  class= "container-body-project-img">
 
+  <img src="./layout_alltrails.png"
+    alt="Urban Backyard" class="image-hover">
+  </div>
+  <div class="image-text-hover">
+    <a href="/alltrails" id="all-tails">REDESIGN ALLTRAILS APP</a>
+  </div>
+</div>
+<div>
+  <div class="container-body-description">
+    <p class="text-body-title">ADDED A COMPARISON FEATURE ON ALLTRAILS MOBILE APP</p>
+    <p class="text-body-description">Individual Work</p>
+    <p class="text-body-description">Spring 2021</p>
+
+  </div>
+
+</div>
+<!--body3-->
 
 
 
@@ -134,7 +154,7 @@
 
       </div>
       <div>
-        <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b">
+        <a href="https://www.linkedin.com/in/vicky-yiqi-wang-6ab7487b/">
           <img class="image_footer"
             src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
             alt="linkedin">
