--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 
 <head>
   <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+  <!--font-name-->
   <script type="text/javascript" src="scripts.js"></script>
+  <script type="text/javascript"
+    src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
+  <!--tool-bar-->
+  <script type="text/javascript"
+    src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
+  <!--tool-bar-->
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.css" />
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js"></script>
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <!--gsap-->
+  <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+  <!--gsap-->
+
+
+
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,13 +56,11 @@
 <body>
 
   <!--head-->
-  <div class="container-head" id="topbar">
+  <div class="container-head main-tool-bar" id="topbar">
 
     <div class="container-head-left">
       <a href="http://vickywang.design/" class="pointer"> VICKY WANG
       </a>
-      <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
-      </p>
     </div>
     <div class="container-head-right" id="topbar-right">
       <div> <a href="/" class="active"> PROJECT </a>
@@ -61,15 +72,22 @@
       <div> <a href="/about" class="inactive"> ABOUT </a>
       </div>
     </div>
+
   </div>
   <!--head-->
+  <!--progress bar-->
+  <div class="header">
+    <div class="progress-container">
+      <div class="progress-bar" id="myBar"></div>
+    </div>
+  </div>
   <div class="blank"></div>
+  <!--progress bar-->
 
   <!--body1-->
   <div class="container_body">
-    <div  class= "container-body-project-img">
-    <img src="./layout_gardenershub.png" 
-      alt="DRAWING OF KAPPE RAY HOUSE" class="image-hover">
+    <div class="container-body-project-img">
+      <img src="./layout_gardenershub.png" alt="DRAWING OF KAPPE RAY HOUSE" class="image-hover">
     </div>
     <div class="image-text-hover">
       <a href="/gardeners_hub" id="gardeners-hub">GARDENERS HUB</a>
@@ -77,7 +95,8 @@
   </div>
   <div>
     <div class="container-body-description">
-      <p class="text-body-title">GARDENER'S HUB CREATES MARKETPLACE AND FRIENDSHIP FOR THE LOCAL COMMUNITY</p>
+      <p class="text-body-title">GARDENER'S HUB CREATES MARKETPLACE AND FRIENDSHIP FOR THE LOCAL
+        COMMUNITY</p>
       <p class="text-body-description">Individual Work</p>
       <p class="text-body-description">Spring 2021</p>
 
@@ -89,10 +108,9 @@
 
   <!--body2-->
   <div class="container_body">
-    <div  class= "container-body-project-img">
+    <div class="container-body-project-img">
 
-    <img src="./layout_mealplanner.png"
-      alt="Urban Backyard" class="image-hover">
+      <img src="./layout_mealplanner.png" alt="Urban Backyard" class="image-hover">
     </div>
     <div class="image-text-hover">
       <a href="/meal_planner" id="meal-planner">MEAL PLANNER</a>
@@ -111,27 +129,26 @@
   <hr>
 
 
-<!--body3-->
-<div class="container_body">
-  <div  class= "container-body-project-img">
+  <!--body3-->
+  <div class="container_body">
+    <div class="container-body-project-img">
 
-  <img src="./layout_alltrails.png"
-    alt="Urban Backyard" class="image-hover">
+      <img src="./layout_alltrails.png" alt="Urban Backyard" class="image-hover">
+    </div>
+    <div class="image-text-hover">
+      <a href="/alltrails" id="all-tails">REDESIGN ALLTRAILS APP</a>
+    </div>
   </div>
-  <div class="image-text-hover">
-    <a href="/alltrails" id="all-tails">REDESIGN ALLTRAILS APP</a>
-  </div>
-</div>
-<div>
-  <div class="container-body-description">
-    <p class="text-body-title">ADDED A COMPARISON FEATURE ON ALLTRAILS MOBILE APP</p>
-    <p class="text-body-description">Individual Work</p>
-    <p class="text-body-description">Spring 2021</p>
+  <div>
+    <div class="container-body-description">
+      <p class="text-body-title">ADDED A COMPARISON FEATURE ON ALLTRAILS MOBILE APP</p>
+      <p class="text-body-description">Individual Work</p>
+      <p class="text-body-description">Spring 2021</p>
+
+    </div>
 
   </div>
-
-</div>
-<!--body3-->
+  <!--body3-->
 
 
 
