--- a/index.html
+++ b/index.html
@@ -2,30 +2,58 @@
 
 <head>
   <link rel="stylesheet" href="main.css" />
+  <script type="text/javascript" src="scripts.js"></script>
+
+
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+    rel="stylesheet">
+  <!--font     font-family: 'Titillium Web', sans-serif; -->
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <!--font     font-family: 'Roboto', sans-serif; -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
+  <!--font using hello-->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <!--font     font-family: 'Catamaran', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--font-->
+  <!--font font-family: 'Lato', sans-serif; -->
+
+  <script type="text/javascript"
+    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <!--jQuery-->
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
-
-  <script type="text/javascript" src="scripts.js"></script>
   <script type="text/javascript"
     src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
-  <!--tool-bar-->
+  <!-- gsap -tool-bar-->
   <script type="text/javascript"
     src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
-  <!--tool-bar-->
+  <!-- gsap - tool-bar-->
+
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <!-- gsap - ScrollTrigger-->
+  <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+  <!-- gsap - ScrollTrigger-->
 
 
   <script type="text/javascript"
     src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?r=5426"></script>
-  <!--for body-->
+  <!--gsap for body-not working now-->
 
   <script type="text/javascript"
     src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
-  <!--for body-->
+  <!--gsap for body-not working now-->
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,9 +77,8 @@
   <meta name="twitter:site" content="VICKY WANG" />
   <meta name="twitter:creator" content="VICKY WANG" />
   <meta property="twitter:title" content="VICKY WANG">
-  <meta property="twitter:description" content="Hi! Thanks for stopping by. 
-  I enjoy design and code who loves solving challenging problems. 
-  Interested in what you see? Shoot me an email :)">
+  <meta property="twitter:description"
+    content="Hi! Thanks for stopping by. I’m a product designer based in San Francisco. I'm a former architectural designer with a passion for solving business challenges through design and occasionally code. If you like what you see here, please feel free to reach out to me at vickyw.design@gmail.com :)">
   <meta name="twitter:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
@@ -60,155 +87,317 @@
 </head>
 
 <body>
-
   <!--head-->
-
   <!--progress bar-->
   <div class="header">
     <div class="progress-container">
       <div class="progress-bar" id="myBar"></div>
     </div>
   </div>
-  <div class="blank"></div>
   <!--progress bar-->
-
-  <div class="container-head main-tool-bar" id="topbar">
-
-    <div class="container-head-left">
-      <a href="http://vickywang.design/" class="pointer"> VW
+  <div class="main-tool-bar">
+    <div class="head-left">
+      <a href="http://vickywang.design/" class="pointer">VW
       </a>
     </div>
-    <div class="container-head-right" id="topbar-right">
+    <div class="head-right">
       <a href="/" class="active"> PROJECT </a>
       <a href="/architecture" class="inactive"> ARCHITECTURE </a>
       <a href="/photography" class="inactive"> PHOTOGRAPHY </a>
-      <a href="/about" class="inactive"> ABOUT </a>
+      <a href="#" class="inactive" id="about"> ABOUT </a>
     </div>
-
   </div>
-
-
   <!--head-->
+  <span id="circle" class="circle"></span>
+
   <!--body-->
+  <div class="body-margin">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="body-landing">
+      <div class="t-hello">HELLO, </div>
 
-  <br>
-  <p class="text-hi">Hello, I'm Vicky</p>
-  <p class="text-intro">I'm a product designer based in the San Francisco Bay Area
-    passionate
-    about translating complex business requirements into compelling user experiences. While my
-    focus is primarily on design, I don't mind occasionally writing code when the need arises.</p>
-  <!--body-->
+      <div class="body-intro">
+        <div class="body-v">
+          <div class="t-hi" id="vk">I'm Vicky.</div>
+        </div>
+
+        <p class="divider"></p>
 
 
+        <div class="body-v">
+          <div class="body-intro">
+              <span class="t-me">a designer</span>
+              <span class="divider1"></span>
+              <span class="t-me"> problem solver. </span>
+          </div>
+          <div class="t-me t-me-1">
+            based in the San Francisco Bay Area.
+          </div>
+        </div>
+
+      </div>
+
+      <p class="t-intro">
+        Passionate about translating complex business requirements into compelling user experiences.
+        While my focus is primarily on design, I don't mind occasionally writing code when the need
+        arises.</p>
+
+    </div>
+    <br>
 
 
-
-
-
-
-
-
-  <!--body1-->
-  <div class="body-h ">
-
-    <div class="body-left body-img" data-aos="fade-right">
-      <img src="./layout_gardenershub.png" alt="DRAWING OF KAPPE RAY HOUSE" class="float">
+    <!--body-->
+    <div class="body-h">
+      <p class="vertical-line ver1"></p>
     </div>
 
-    <div class="body-right body-txt" data-aos="fade-left">
-      <p>GARDENER'S HUB CREATES MARKETPLACE AND FRIENDSHIP FOR THE LOCAL
-        COMMUNITY</p>
-      <p>Individual Work</p>
-      <p>Spring 2021</p>
+    <!-- content-->
+    <div class="content-tl">
+      <p class="t-tl"> Selected Projects </p>
+      <img class="se-arrow" src="./se-arrow.svg" alt="se-arrow">
     </div>
+    <!-- content-->
+
+    <!--Project 1-->
+    <div class="body-h">
+      <div class="body-left body-img">
+        <img src="./layout_gardenershub.png" alt="DRAWING OF KAPPE RAY HOUSE" class="float">
+      </div>
+
+      <div class="body-right body-txt">
+        <p class="t-title">GARDENER'S HUB</p>
+        <p class="t-subtitle">A marketplace for local community</p>
+        <p class="t-subtitle">Spring 2021</p>
+
+      </div>
+
+    </div>
+    <!--Project 1-->
+    <!--Project 2-->
+    <div class="body-h">
+      <div class="body-right  body-txt">
+        <p class="t-title">MEAL PLANNER</p>
+        <p class="t-subtitle">A mobile app helps planning a healthy meal</p>
+        <p class="t-subtitle">Spring 2021</p>
+      </div>
+      <div class="body-left body-img">
+        <img src="./layout_mealplanner.png" alt="Meal Planner">
+      </div>
+    </div>
+    <!--Project 2-->
+    <!--Project 3-->
+    <div class="body-h">
+
+      <div class="body-left body-img">
+        <img src="./layout_alltrails.png" alt="Redesign AllTrails">
+      </div>
+
+      <div class="body-right body-txt">
+        <p class="t-title">REDESIGN ALLTRAILS APP</p>
+        <p class="t-subtitle">Spring 2021</p>
+      </div>
+    </div>
+    <!--Project 3-->
+
+
+    <div class="body-h">
+      <p class="vertical-line ver2"></p>
+    </div>
+
+    <!-- content-->
+    <div class="content-tl">
+      <p class="t-tl"> About Me
+      </p>
+      <img class="se-arrow" src="./se-arrow.svg" alt="se-arrow">
+
+    </div>
+    <!-- content-->
+    <!-- about me-->
+    <br>
+    <div class="t-title body-v">
+      <a href="https://s3-us-west-1.amazonaws.com/vickywang.design/about/Resume.pdf"
+        class="text-about-resume" data-aos="fade-up" data-aos-duration="500"> Download My Resume
+      </a>
+    </div>
+
+    <br>
+
+
+    <div class="about-me">
+      <div class="body-v">
+        <div class="body-left t-titlepls">
+          EDUCATION </div>
+        <div class="body-v">
+          <p class="t-title">University of California, Berkeley
+          </p>
+          <p class="t-time">August 2015 - May 2019</p>
+          <p class="t-subtitle">Master of Architecture</p>
+          <p class="t-subtitle">Building Science / Technology</p>
+        </div>
+        <br>
+        <div class="body-v">
+          <p class="t-title">Beijing University of Technology</p>
+          <p class="t-time">May 2009 - August 2013 </p>
+          <p class="t-subtitle">Bachelor of Art and Design</p>
+          <p class="t-subtitle">Landscape Design</p>
+
+        </div>
+      </div>
+
+
+
+      <div class="body-v">
+        <div class="body-left t-titlepls">
+          SKILL&TOOLS
+        </div>
+        <div class="body-v">
+          <p class="t-title">UI/UX
+          </p>
+          <p class="t-subtitle">Sketch, Adobe XD, Figma</p>
+
+
+        </div>
+
+        <div class="body-v">
+          <p class="t-title">Programming</p>
+          <p class="t-subtitle">HTML, CSS, JavaScript</p>
+          <p class="t-subtitle">jQuery</p>
+
+
+        </div>
+
+        <div class="body-v">
+          <p class="t-title">2D Graphic</p>
+          <p class="t-subtitle">Adobe Suite (Illustrator, Photoshop, InDesign)</p>
+          <p class="t-subtitle">AutoCAD</p>
+        </div>
+
+        <div class="body-v">
+          <p class="t-title">3D Modelling and VR</p>
+          <p class="t-subtitle">3Dmax Studio, Rhino, Sketchup</p>
+          <p class="t-subtitle">Grasshopper, Ladybug, DIVA</p>
+          <p class="t-subtitle">Unity</p>
+
+        </div>
+
+        <div class="body-v">
+          <p class="t-title">Design Research
+          </p>
+          <p class="t-subtitle">Affinity Diagramming</p>
+          <p class="t-subtitle">Experience Prototyping</p>
+        </div>
+        <div class="body-v">
+          <p class="t-title">Fabrication
+          </p>
+          <p class="t-subtitle">3D Printing, 3D Scanner (NextEngine 3D)</p>
+          <p class="t-subtitle">CNC (Techno Isel 3-axis CNC router), </p>
+          <p class="t-subtitle">Laser Cutter, Blade Cutter (Zund S3 Digital)</p>
+        </div>
+      </div>
+
+      <div class="body-v">
+        <div class="body-left t-titlepls">
+          EXPERIENCE </div>
+        <div class="body-v">
+          <p class="t-title">Buro Ole Scheeren</p>
+          <p class="t-time">August 2017 - July 2018</p>
+          <p class="t-subtitle">Beijing, China</p>
+          <p class="t-subtitle">Architectural Designer</p>
+        </div>
+
+        <div class="body-v">
+          <p class="t-title">In Design Studio</p>
+          <p class="t-time">May 2017 - August 2017</p>
+          <p class="t-subtitle">New York, U.S.</p>
+          <p class="t-subtitle">Summer Intern</p>
+        </div>
+
+        <div class="body-v">
+          <p class="t-title">PDI Design Group</p>
+          <p class="t-time">December 2013 - July 2015</p>
+          <p class="t-subtitle">Beijing, China</p>
+          <p class="t-subtitle">Architectural Designer</p>
+        </div>
+
+        <div class="body-v">
+          <p class="t-title">Do Union</p>
+          <p class="t-time">July 2010 - May 2012</p>
+          <p class="t-subtitle">Beijing, China</p>
+          <p class="t-subtitle">Architectural Intern</p>
+        </div>
+
+
+
+
+      </div>
+
+
+    </div>
+
+    <!-- about me-->
+
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
+
+
+
 
   </div>
 
-  <!--body1-->
-
-  <!--body2-->
-
-  <div class="body-h">
-    <div class="body-right  body-txt" data-aos="fade-right">
-      <p>A MOBILE APP HELPS PLANNING A HEALTHY AND EFFICIENT MEAL</p>
-      <p>Individual Work</p>
-      <p>Spring 2021</p>
-    </div>
-    <div class="body-left body-img" data-aos="fade-left">
-      <img src="./layout_mealplanner.png" alt="Meal Planner">
-    </div>
 
 
+  <!--back to top-->
+  <button onclick="topFunction()" id="myBtn" title="Go to top">
+    <img id="bottom-arrow" class="ArrowHover" src="./arrow-top.svg" alt="back to top">
 
-  </div>
+    <div id="btnFont">TOP</div>
 
-  <!--body2-->
-
-
-
-  <!--body3-->
-  <div class="body-h">
-
-    <div class="body-left body-img" data-aos="fade-right">
-      <img src="./layout_alltrails.png" alt="Redesign AllTrails">
-    </div>
-
-    <div class="body-right body-txt" data-aos="fade-left">
-      <p>REDESIGN ALLTRAILS APP</p>
-      <p>Individual Work</p>
-      <p>Spring 2021</p>
-    </div>
-
-  </div>
-  <!--body3-->
-
-
-
-
-
-
-  <div class="blank-thicker"></div>
-
-
+  </button>
+  <!--back to top-->
 
   <!--footer-->
-  <div class="container_footer">
-
-    <div id="infor">
-      <div>
-        <a href="mailto:vickyw.design@gmail.com">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
-        </a>
-
-      </div>
-      <div>
-        <a href="https://www.linkedin.com/in/vicky-yiqi-wang-6ab7487b/">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
-            alt="linkedin">
-        </a>
-      </div>
-
-      <div>
-        <a href="https://github.com/vicky-wyq">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github">
-        </a>
-      </div>
-
-      <div>
-        <a href="https://medium.com/@vickywang.design">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium">
-        </a>
-      </div>
-    </div>
-
-    <p class="lighter_font">COPYRIGHT &#169; VICKY WANG
+  <div class="footer">
+    <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
     </p>
+    <div class="footer-right">
+      <a href="mailto:vickyw.design@gmail.com">
+        <img class="footer-logo" src="./mail.svg" alt="email">
+      </a>
 
+      <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b/">
+        <img class="footer-logo" src="./in.svg" alt="linkedin">
+      </a>
+
+      <a href="https://github.com/vicky-wyq">
+        <img class="footer-logo" src="./git.svg" alt="github">
+      </a>
+
+      <a href="https://www.instagram.com/vw_yiqi/">
+        <img class="footer-logo" src="./ins.svg" alt="medium">
+      </a>
+    </div>
   </div>
+  <!--footer-->
+
+
+
 </body>
 
 </html>
