--- a/architecture/index.html
+++ b/architecture/index.html
@@ -1,301 +1,193 @@
 <html>
 
-<head>
-  <link rel="stylesheet" href="../main.css">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>Vicky Wang</title>
-  <meta property="og:site_name" content="VICKY WANG">
-
-  <meta property="og:url" content="/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="VICKY WANG" />
-  <meta property="og:description" content="Hi! Thanks for stopping by. 
-  I enjoy design and code who loves solving challenging problems. 
-  Interested in what you see? Shoot me an email :) " />
-  <meta property="og:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png" />
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="750">
-  <meta property="og:image:height" content="750">
-
-  <meta name="twitter:url" content="https://vickywang.design">
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="VICKY WANG" />
-  <meta name="twitter:creator" content="VICKY WANG" />
-  <meta property="twitter:title" content="VICKY WANG">
-  <meta property="twitter:description" content="Hi! Thanks for stopping by. 
-  I enjoy design and code who loves solving challenging problems. 
-  Interested in what you see? Shoot me an email :)">
-  <meta name="twitter:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="750">
-  <meta property="og:image:height" content="750">
-</head>
+  <head>
+    <link rel="stylesheet" href="../main.css">
+    <script type="text/javascript" src="../scripts.js"></script>
+  
+  
+  
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+      rel="stylesheet">
+    <!--font     font-family: 'Titillium Web', sans-serif; -->
+  
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet">
+    <!--font     font-family: 'Roboto', sans-serif; -->
+  
+    <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
+    <!--font using hello-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet">
+    <!--font     font-family: 'Catamaran', sans-serif; -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet">
+    <!--font font-family: 'Lato', sans-serif; -->
+  
+    <script type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <!--jQuery-->
+    <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--aos-->
+    <script type="text/javascript"
+      src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
+    <!-- gsap -tool-bar-->
+    <script type="text/javascript"
+      src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
+    <!-- gsap - tool-bar-->
+  
+    <script type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <!-- gsap - ScrollTrigger-->
+    <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+    <!-- gsap - ScrollTrigger-->
+  
+  
+  
+  
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+    <title>Vicky Wang</title>
+    <meta property="og:site_name" content="VICKY WANG">
+  
+    <meta property="og:url" content="/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="VICKY WANG" />
+    <meta property="og:description" content="Hi! Thanks for stopping by. 
+      I enjoy design and code who loves solving challenging problems. 
+      Interested in what you see? Shoot me an email :) " />
+    <meta property="og:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg" />
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="750">
+    <meta property="og:image:height" content="750">
+  
+    <meta name="twitter:url" content="//vickywang.design">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="VICKY WANG" />
+    <meta name="twitter:creator" content="VICKY WANG" />
+    <meta property="twitter:title" content="VICKY WANG">
+    <meta property="twitter:description"
+      content="Hi! Thanks for stopping by. I’m a product designer based in San Francisco. I'm a former architectural designer with a passion for solving business challenges through design and occasionally code. If you like what you see here, please feel free to reach out to me at vickyw.design@gmail.com :)">
+    <meta name="twitter:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="750">
+    <meta property="og:image:height" content="750">
+  
+  </head>
 
 <body>
   <!--head-->
-  <div class="container-head" id="topbar">
-
-    <div class="container-head-left">
-      <a href="http://vickywang.design/" class="pointer"> VICKY WANG
-      </a>
-      <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
-      </p>
+  <!--progress bar-->
+  <div class="header">
+    <div class="progress-container">
+      <div class="progress-bar" id="myBar"></div>
     </div>
-
-    <div class="container-head-right" id="topbar-right">
-      <div> <a href="/" class="inactive"> PROJECT </a>
-      </div>
-      <div> <a href="/architecture" class="active"> ARCHITECTURE </a>
-      </div>
-      <div> <a href="/photography" class="inactive"> PHOTOGRAPHY </a>
-      </div>
-      <div> <a href="/about" class="inactive"> ABOUT </a>
-      </div>
+  </div>
+  <!--progress bar-->
+  <div class="main-tool-bar">
+    <div class="head-left">
+      <a href="http://vickywang.design/" class="pointer">VW
+      </a>
+    </div>
+    <div class="head-right">
+      <a href="/" class="inactive  head-right-1550"> PROJECT </a>
+      <a href="/architecture" class="active head-right-1550"> ARCHITECTURE </a>
+      <a href="/photography" class="inactive  head-right-1550"> PHOTOGRAPHY </a>
+      <a href="#" class="inactive  head-right-1550" id="about"> ABOUT </a>
     </div>
   </div>
   <!--head-->
 
-  <!--body1-->
-  <div class="container_body">
-    <img src="./RC_Diagram.svg" alt="RECREATION COMMONS" class="image-hover" id="image-rc">
-
-    <div class="image-text-hover">
-      <div><a href="/architecture/recreation_commons">RECREATION COMMONS</a></div>
-    </div>
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">INTEGRATED DESIGN STUDIO, ARCH 203, Fall 2018</p>
-      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
-      <p class="text-body-description"> Instructor: Roddy Creedon</p>
-      <p class="text-body-description">Site: 110 Franklin St. San Francisco, CA, U.S. 94102</p>
-      <p class="text-body-description"> Total Floor Area: 22900 s.f. 4 Floors</p>
-    </div>
-
-  </div>
-  <!--body1-->
-  <hr>
-
-
-  <!--body3-->
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg"
-      alt="RECREATION COMMONS" class="image-hover">
-
-    <div class="image-text-hover">
-      <div><a href="/architecture/narrow_stripes">NARROW STRIPES</a></div>
-
-    </div>
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">COMPETITION, HYDE PARK LIBRARY LONDON, Fall 2017</p>
-      <p class="text-body-description">Site: Location: Hyde Park, London</p>
-      <p class="text-body-description">7500 square metres approx.</p>
-      <p class="text-body-description">Maximum Built Area: 4000 square metres</p>
-      <p class="text-body-description"> (i.e. Maximum Cumulative floor area for all the floors)</p>
-    </div>
-  </div>
-  <!--body3-->
-  <hr>
-  <!--body4-->
-  <div class="container_body">
-    <img src="./KP_Diagram.jpg" alt="MANIFOLD GROUND" class="image-hover">
-
-    <div class="image-text-hover">
-      <div><a>KAPPE HOUSE STUDY</a></div>
-
-    </div>
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">THE MAKING OF BUILDINGS, ARCH 209, FALL 2015</p>
-      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
-      <p class="text-body-description">Instructor: Yung Ho Chang</p>
-    </div>
-  </div>
-  <!--body4-->
-  <hr>
-
-  <!--body6-->
-  <div class="container_body">
-    <img src="./recovery_of_river_edges_render.jpg" alt="RECOVERY OF RIVER EDGES"
-      class="image-hover">
-
-    <div class="image-text-hover">
-      <div><a href="/architecture/recovery_of_river_edges">RECOVERY OF RIVER EDGES</a></div>
-
-    </div>
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">Introduction to Architecture Studio 2, Spring 2016</p>
-      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
-      <p class="text-body-description">Instructor: Jay Atherton</p>
-      <p class="text-body-description">Site: Sunnynook River Park, 2901 Glendale Blvd, Los Angeles,
-        CA 90039</p>
-      <p class="text-body-description">Program Area: Indoor/outdoor community space for performances
-        3000 sq.ft.
-      </p>
-    </div>
-  </div>
-  <!--body6-->
-
-  <hr>
+  <!--body-->
 
 
 
-  <!--body5-->
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/MG_Diagram.jpg"
-      alt="MANIFOLD GROUND" class="image-hover">
-
-    <div class="image-text-hover">
-      <div><a href="/architecture/manifold_ground/">MANIFOLD GROUND</a></div>
-
-    </div>
-  </div>
-
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">[IN]ARCH ADV, SUMMERS 2014</p>
-      <p class="text-body-description">Summer Program, CED, UC Berkeley</p>
-      <p class="text-body-description">Instructor: Keith Plymale</p>
-      <p class="text-body-description">Site: 450 Hayes St. San Francisco, CA 94102</p>
-    </div>
-  </div>
-  <!--body5-->
-
-
-  <hr>
-
-  <!--body5-->
-  <div class="container_body">
-    <img src="./the_rotation_of_curves.jpg" alt="THE ROTATION CURVES" class="image-hover">
-
-    <div class="image-text-hover">
-      <div><a href="/architecture/the_rotation_of_curves/">THE ROTATION OF CURVES</a></div>
-
-    </div>
-  </div>
-
-
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">Introduction to Architecture Studio 1, Fall 2015</p>
-      <p class="text-body-description">M. Arch, CED, UC Berkeley</p>
-      <p class="text-body-description"> Instructor: Rudabeh Pakravan</p>
-      <p class="text-body-description">Part i Floating Island</p>
-      <p class="text-body-description">Part ii Foam</p>
-      <p class="text-body-description">Part iii House</p>
-
-    </div>
-  </div>
-  <!--body5-->
-  <hr>
-
-  <!--body6-->
-  <div class="container_body">
-    <img src="./LACAMA.jpg" alt="LACMA" class="image-hover">
-
-    <div class="image-text-hover">
-      <div><a href="/architecture/LACAMA/">LACMA</a></div>
-
-    </div>
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-description">M. Arch, CED, UC Berkeley, ARCH 201, FALL 2016</p>
-      <p class="text-body-description"> Instructor: Mark Anderson</p>
-    </div>
-  </div>
-  <!--body6-->
-  <hr>
-
-  <!--body7-->
-  <div class="container_body">
-    <img src="./thesis_studio.jpg" alt="THESIS STUDIO" class="image-hover">
-
-    <div class="image-text-hover">
-      <div><a href="/architecture/thesis_studio/">ON ORDER: DIFFERENTIATED CONTINUITY OF OBJECTS</a>
-      </div>
-
-    </div>
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">THESIS STUDIO
-      </p>
-      <p class="text-body-description">M. Arch, CED, UC Berkeley, ARCH 204 A & B, FALL 2018 - SPRING
-        2019</p>
-      <p class="text-body-description"> Instructor: Kyle Steinfeld</p>
-    </div>
-  </div>
-  <!--body7-->
-  <hr>
-
-  <!--body8-->
-  <div class="container_body">
-    <img src="./others.jpg" alt="OTHER ACADEMIC WORKS" class="image-hover">
-
-    <div class="image-text-hover">
-      <div><a href="/architecture/other_academic_works/">OTHER ACADEMIC WORKS</a></div>
-
-    </div>
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">OTHER ACADEMIC WORKS</p>
-      <p class="text-body-description"> 798 Exhibition Gallery 2010</p>
-      <p class="text-body-description">The Renovation of a Factory Building 2013</p>
-      <p class="text-body-description"> Mountain Residential House 2012</p>
-    </div>
-  </div>
-  <!--body8-->
-  <div class="blank-thicker"></div>
 
 
 
   <!--footer-->
-  <div class="container_footer">
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <!--back to top-->
+  <button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
+    <img id="bottom-arrow" class="ArrowHover" src="../arrow-top.svg" alt="back to top">
 
-    <div id="infor">
-      <div>
-        <a href="mailto:vickyw.design@gmail.com">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
-        </a>
+    <div id="btnFont">TOP</div>
 
-      </div>
-      <div>
-        <a href="https://www.linkedin.com/in/vicky-yiqi-wang-6ab7487b/">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
-            alt="linkedin">
-        </a>
-      </div>
+  </button>
+  <!--back to top-->
 
-      <div>
-        <a href="https://github.com/vicky-wyq">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github">
-        </a>
-      </div>
-
-      <div>
-        <a href="https://medium.com/@vickywang.design">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium">
-        </a>
-      </div>
-    </div>
-
-    <p class="lighter_font">COPYRIGHT &#169; VICKY WANG
+  <!--footer-->
+  <div class="footer">
+    <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
     </p>
+    <div class="footer-right">
+      <a href="mailto:vickyw.design@gmail.com">
+        <img class="footer-logo" src="../mail.svg" alt="email">
+      </a>
 
+      <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b/">
+        <img class="footer-logo" src="../in.svg" alt="linkedin">
+      </a>
+
+      <a href="https://github.com/vicky-wyq">
+        <img class="footer-logo" src="../git.svg" alt="github">
+      </a>
+
+      <a href="https://www.instagram.com/vw_yiqi/">
+        <img class="footer-logo" src="../ins.svg" alt="medium">
+      </a>
+    </div>
   </div>
+  <!--footer-->
 </body>
 
 </html>
