--- a/index.html
+++ b/index.html
@@ -47,13 +47,7 @@
   <!-- gsap - ScrollTrigger-->
 
 
-  <script type="text/javascript"
-    src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?r=5426"></script>
-  <!--gsap for body-not working now-->
 
-  <script type="text/javascript"
-    src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
-  <!--gsap for body-not working now-->
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -101,10 +95,10 @@
       </a>
     </div>
     <div class="head-right">
-      <a href="/" class="active"> PROJECT </a>
-      <a href="/architecture" class="inactive"> ARCHITECTURE </a>
-      <a href="/photography" class="inactive"> PHOTOGRAPHY </a>
-      <a href="#" class="inactive" id="about"> ABOUT </a>
+      <a href="/" class="active  head-right-1550"> PROJECT </a>
+      <a href="/architecture" class="inactive head-right-1550"> ARCHITECTURE </a>
+      <a href="/photography" class="inactive  head-right-1550"> PHOTOGRAPHY </a>
+      <a href="#" class="inactive  head-right-1550" id="about"> ABOUT </a>
     </div>
   </div>
   <!--head-->
@@ -122,36 +116,33 @@
     <br>
     <br>
     <div class="body-landing">
-      <div class="t-hello">HELLO, </div>
-
+      <div class="body-intro">
+        <div class="t-hello" id="t-hello-1550">HELLO, </div>
+      </div>
       <div class="body-intro">
         <div class="body-v">
-          <div class="t-hi" id="vk">I'm Vicky.</div>
+          <div class="t-hi" id="t-hi-1550">I'm Vicky.</div>
         </div>
-
         <p class="divider"></p>
-
-
         <div class="body-v">
           <div class="body-intro">
-              <span class="t-me">a designer</span>
-              <span class="divider1"></span>
-              <span class="t-me"> problem solver. </span>
+            <span class="t-me" id="t-me-1550">a designer</span>
+            <span class="divider1"></span>
+            <span class="t-me" id="t-me-1550"> problem solver. </span>
           </div>
-          <div class="t-me t-me-1">
+          <div class="t-me t-me-1" id="t-me-1550">
             based in the San Francisco Bay Area.
           </div>
         </div>
-
       </div>
-
       <p class="t-intro">
-        Passionate about translating complex business requirements into compelling user experiences.
-        While my focus is primarily on design, I don't mind occasionally writing code when the need
+        Passionate about translating complex business requirements into compelling user
+        experiences.
+        While my focus is primarily on design, I don't mind occasionally writing code when the
+        need
         arises.</p>
-
     </div>
-    <br>
+
 
 
     <!--body-->
@@ -162,21 +153,23 @@
     <!-- content-->
     <div class="content-tl">
       <p class="t-tl"> Selected Projects </p>
-      <img class="se-arrow" src="./se-arrow.svg" alt="se-arrow">
+      <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
 
     <!--Project 1-->
     <div class="body-h">
-      <div class="body-left body-img">
-        <img src="./layout_gardenershub.png" alt="DRAWING OF KAPPE RAY HOUSE" class="float">
+      <div class="body-left body-img float">
+        <a href="/gardeners_hub">
+          <img src="./layout_gardenershub.png" alt="Gardeners' Hub">
+        </a>
       </div>
 
       <div class="body-right body-txt">
-        <p class="t-title">GARDENER'S HUB</p>
+        <a href="/gardeners_hub" class="t-title">GARDENERS HUB</a>
+        <p class="horizontal-line"></p>
         <p class="t-subtitle">A marketplace for local community</p>
         <p class="t-subtitle">Spring 2021</p>
-
       </div>
 
     </div>
@@ -184,24 +177,32 @@
     <!--Project 2-->
     <div class="body-h">
       <div class="body-right  body-txt">
-        <p class="t-title">MEAL PLANNER</p>
+        <a href="/meal_planner" class="t-title">MEAL PLANNER</a>
+        <p class="horizontal-line"></p>
+
         <p class="t-subtitle">A mobile app helps planning a healthy meal</p>
         <p class="t-subtitle">Spring 2021</p>
       </div>
-      <div class="body-left body-img">
-        <img src="./layout_mealplanner.png" alt="Meal Planner">
+      <div class="body-left body-img float">
+        <a href="/meal_planner">
+          <img src="./layout_mealplanner.png" alt="Meal Planner">
+        </a>
       </div>
     </div>
     <!--Project 2-->
     <!--Project 3-->
     <div class="body-h">
 
-      <div class="body-left body-img">
-        <img src="./layout_alltrails.png" alt="Redesign AllTrails">
+      <div class="body-left body-img float">
+        <a href="/alltrails">
+          <img src="../layout_alltrails.png" alt="Redesign AllTrails">
+        </a>
       </div>
 
       <div class="body-right body-txt">
-        <p class="t-title">REDESIGN ALLTRAILS APP</p>
+        <a href="/alltrails" class="t-title">REDESIGN ALLTRAILS APP</a>
+        <p class="horizontal-line"></p>
+
         <p class="t-subtitle">Spring 2021</p>
       </div>
     </div>
@@ -211,24 +212,160 @@
     <div class="body-h">
       <p class="vertical-line ver2"></p>
     </div>
+    <!-- content-->
+    <div class="content-tl">
+      <a href="/architecture" class="t-tl"> Architecture
+      </a>
+      <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
+    </div>
+    <!-- content-->
+    <!-- architecture-->
+    <div class="carousel">
+      <button class="prev">
+        <img src="./arrow-left.svg" alt="left">
+      </button>
+      <a href="/architecture" class="photos">
+        <img class="photo photo-selected"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/architecture/NS_Render.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_1.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09182020_1.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09152020.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09152020_1.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_3.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_4.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_9.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_5.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_6.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_7.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_8.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/01032020_2.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/01032020_1.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/01032020.jpg">
+        <div class="indicators">
+          <div class="indicator indicator-selected"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+        </div>
+      </a>
 
+      <button class="next"> <img src="./arrow-right.svg" alt="left">
+      </button>
+
+    </div>
+    <!-- architecture-->
+
+    <!-- content-->
+
+    <div class="content-tl">
+      <a href="/photography" class="t-tl"> Photography
+      </a>
+      <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
+    </div>
+    <!-- content-->
+
+
+
+    <!-- photography-->
+    <div class="carousel">
+      <button class="prev ">
+        <img src="./arrow-left.svg" alt="left">
+      </button>
+      <a href="/photography" class="photos">
+        <img class="photo photo-selected"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_1.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09182020_1.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09152020.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09152020_1.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_3.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_4.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_9.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_5.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_6.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_7.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_8.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/01032020_2.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/01032020_1.jpg">
+        <img class="photo"
+          src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/01032020.jpg">
+        <div class="indicators">
+          <div class="indicator indicator-selected"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+          <div class="indicator"></div>
+        </div>
+      </a>
+
+      <button class="next"> <img src="./arrow-right.svg" alt="left">
+      </button>
+
+    </div>
+    <!-- photography-->
     <!-- content-->
     <div class="content-tl">
       <p class="t-tl"> About Me
       </p>
-      <img class="se-arrow" src="./se-arrow.svg" alt="se-arrow">
+      <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
 
     </div>
     <!-- content-->
     <!-- about me-->
-    <br>
     <div class="t-title body-v">
       <a href="https://s3-us-west-1.amazonaws.com/vickywang.design/about/Resume.pdf"
-        class="text-about-resume" data-aos="fade-up" data-aos-duration="500"> Download My Resume
+        class="text-about-resume"> Download My Resume
       </a>
     </div>
 
-    <br>
 
 
     <div class="about-me">
@@ -364,10 +501,10 @@
 
 
   <!--back to top-->
-  <button onclick="topFunction()" id="myBtn" title="Go to top">
+  <button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
     <img id="bottom-arrow" class="ArrowHover" src="./arrow-top.svg" alt="back to top">
 
-    <div id="btnFont">TOP</div>
+    <div>TOP</div>
 
   </button>
   <!--back to top-->
