--- a/photography/index.html
+++ b/photography/index.html
@@ -5,6 +5,51 @@
   <script type="text/javascript" src="../scripts.js"></script>
 
 
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
+    rel="stylesheet">
+  <!--font     font-family: 'Titillium Web', sans-serif; -->
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <!--font     font-family: 'Roboto', sans-serif; -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
+  <!--font using hello-->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <!--font     font-family: 'Catamaran', sans-serif; -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+    rel="stylesheet">
+  <!--font font-family: 'Lato', sans-serif; -->
+
+  <script type="text/javascript"
+    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <!--jQuery-->
+  <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!--aos-->
+  <script type="text/javascript"
+    src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
+  <!-- gsap -tool-bar-->
+  <script type="text/javascript"
+    src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
+  <!-- gsap - tool-bar-->
+
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <!-- gsap - ScrollTrigger-->
+  <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+  <!-- gsap - ScrollTrigger-->
+
+
+
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Vicky Wang</title>
@@ -14,321 +59,168 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="VICKY WANG" />
   <meta property="og:description" content="Hi! Thanks for stopping by. 
-  I enjoy design and code who loves solving challenging problems. 
-  Interested in what you see? Shoot me an email :) " />
-  <meta property="og:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png" />
+    I enjoy design and code who loves solving challenging problems. 
+    Interested in what you see? Shoot me an email :) " />
+  <meta property="og:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg" />
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
 
-  <meta name="twitter:url" content="https://vickywang.design">
+  <meta name="twitter:url" content="//vickywang.design">
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="VICKY WANG" />
   <meta name="twitter:creator" content="VICKY WANG" />
   <meta property="twitter:title" content="VICKY WANG">
-  <meta property="twitter:description" content="Hi! Thanks for stopping by. 
-  I enjoy design and code who loves solving challenging problems. 
-  Interested in what you see? Shoot me an email :)">
-  <meta name="twitter:image" content="https://s3-us-west-1.amazonaws.com/vickywang.design/VW.png">
+  <meta property="twitter:description"
+    content="Hi! Thanks for stopping by. I’m a product designer based in San Francisco. I'm a former architectural designer with a passion for solving business challenges through design and occasionally code. If you like what you see here, please feel free to reach out to me at vickyw.design@gmail.com :)">
+  <meta name="twitter:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
+
 </head>
 
 <body>
   <!--head-->
-  <div class="container-head" id="topbar">
-
-    <div class="container-head-left">
-      <a href="http://vickywang.design/" class="pointer"> VICKY WANG
+  <!--progress bar-->
+  <div class="header">
+    <div class="progress-container">
+      <div class="progress-bar" id="myBar"></div>
+    </div>
+  </div>
+  <!--progress bar-->
+  <div class="main-tool-bar">
+    <div class="head-left">
+      <a href="http://vickywang.design/" class="pointer">VW
       </a>
-      <p class="lighter_font" id="topleftlighterfont"> DESIGN & RESEARCH
-      </p>
     </div>
-
-    <div class="container-head-right" id="topbar-right">
-      <div> <a href="/" class="inactive"> PROJECT </a>
-      </div>
-      <div> <a href="/architecture" class="inactive"> ARCHITECTURE </a>
-      </div>
-      <div> <a href="/photography" class="active"> PHOTOGRAPHY </a>
-      </div>
-      <div> <a href="/about" class="inactive"> ABOUT </a>
-      </div>
+    <div class="head-right">
+      <a href="/" class="inactive  head-right-1550"> PROJECT </a>
+      <a href="/architecture" class="inactive head-right-1550"> ARCHITECTURE </a>
+      <a href="/photography" class="active  head-right-1550"> PHOTOGRAPHY </a>
+      <a href="#" class="inactive  head-right-1550" id="about"> ABOUT </a>
     </div>
-
   </div>
   <!--head-->
+  <!--body-->
 
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="body-landing">
+    <div class="body-intro">
+      <div class="t-hello" id="t-hello-1550">HELLO, </div>
+    </div>
+    <div class="body-intro">
+      <div class="body-v">
+        <div class="t-hi" id="t-hi-1550">I'm Vicky.</div>
+      </div>
+      <p class="divider"></p>
+      <div class="body-v">
+        <span class="t-me" id="t-me-1550">Photography is my favorite hobby.</span>
+        <span class="t-me" id="t-me-1550"> Recording memories of nature forms
+        </span>
 
-
-  <!--body-hover button-->
-
-
-
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09182020_1.jpg"
-      alt="Yellowstone National Park">
+      </div>
+    </div>
+    <p class="t-intro">
+      Passionate about translating complex business requirements into compelling user
+      experiences.
+      While my focus is primarily on design, I don't mind occasionally writing code when the
+      need
+      arises.</p>
   </div>
 
-  <div class="container-body-description">
-    <p class="text-body-title">Yellowstone National Park</p>
-    <p class="text-body-description"> September, 2020</p>
-  </div>
 
-  <hr>
 
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019.jpg"
-      alt="Bosque Del Apache National Wildlife Refuge">
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">Bosque Del Apache National Wildlife Refuge</p>
-      <p class="text-body-description"> December, 2019</p>
+
+  
+  <div class="body-h">
+    <div class="body-left body-img p1">
+      <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09182020_1.jpg"
+        alt="Yellowstone National Park" class="float">
+    </div>
+
+    <div class="body-right body-txt">
+      <p class="t-title">Yellowstone National Park</p>
+      <p class="t-subtitle">September, 2020</p>
     </div>
   </div>
 
-  <hr>
-
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_1.jpg"
-      alt="Bosque Del Apache National Wildlife Refuge">
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">Bosque Del Apache National Wildlife Refuge</p>
-      <p class="text-body-description"> December, 2019</p>
-    </div>
-  </div>
 
 
-  <hr>
 
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09152020.jpg"
-      alt="Teton National Park">
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">Teton National Park</p>
-      <p class="text-body-description"> September, 2020</p>
-    </div>
-  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <!--back to top-->
+  <button onclick="topFunction()" id="myBtn" class=" myBtn-1550" title="Go to top">
+    <img id="bottom-arrow" class="ArrowHover" src="../arrow-top.svg" alt="back to top">
 
-  <hr>
+    <div id="btnFont">TOP</div>
 
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/09152020_1.jpg"
-      alt="Teton National Park">
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">Teton National Park</p>
-      <p class="text-body-description"> September, 2020</p>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_3.jpg"
-      alt="White Sands National Monument">
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">White Sands National Monument</p>
-      <p class="text-body-description"> December, 2019</p>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_4.jpg"
-      alt="White Sands National Monument">
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">White Sands National Monument</p>
-      <p class="text-body-description"> December, 2019</p>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_9.jpg"
-      alt="White Sands National Monument">
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">White Sands National Monument</p>
-      <p class="text-body-description"> December, 2019</p>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_5.jpg"
-      alt="White Sands National Monument">
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">White Sands National Monument</p>
-      <p class="text-body-description"> December, 2019</p>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_6.jpg"
-      alt="White Sands National Monument">
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">White Sands National Monument</p>
-      <p class="text-body-description"> December, 2019</p>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_7.jpg"
-      alt="White Sands National Monument">
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">White Sands National Monument</p>
-      <p class="text-body-description"> December, 2019</p>
-    </div>
-  </div>
-
-  <hr>
-
-
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12272019_8.jpg"
-      alt="White Sands National Monument">
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">White Sands National Monument</p>
-      <p class="text-body-description"> December, 2019</p>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/12282019.jpg"
-      alt="White Sands National Monument">
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">Taos Pueblo</p>
-      <p class="text-body-description"> December, 2019</p>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/01032020_2.jpg"
-      alt="Sacramento National Wildlife Refuge">
-
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">Sacramento National Wildlife Refuge</p>
-      <p class="text-body-description"> December, 2019</p>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/01032020_1.jpg"
-      alt="Sacramento National Wildlife Refuge">
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">Sacramento National Wildlife Refuge</p>
-      <p class="text-body-description"> December, 2019</p>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/01032020_2.jpg"
-      alt="Sacramento National Wildlife Refuge">
-
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">Sacramento National Wildlife Refuge</p>
-      <p class="text-body-description"> December, 2019</p>
-    </div>
-  </div>
-
-  <hr>
-
-  <div class="container_body">
-    <img src="https://s3-us-west-1.amazonaws.com/vickywang.design/photography/01032020.jpg"
-      alt="Sacramento National Wildlife Refuge">
-  </div>
-  <div>
-    <div class="container-body-description">
-      <p class="text-body-title">Sacramento National Wildlife Refuge</p>
-      <p class="text-body-description"> December, 2019</p>
-    </div>
-  </div>
-
-  <div class="blank-thicker"></div>
-
+  </button>
+  <!--back to top-->
 
   <!--footer-->
-  <div class="container_footer">
-
-    <div id="infor">
-      <div>
-        <a href="mailto:vickyw.design@gmail.com">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_mail.svg" alt="email">
-        </a>
-
-      </div>
-      <div>
-        <a href="https://www.linkedin.com/in/vicky-yiqi-wang-6ab7487b/">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_linkedin.svg"
-            alt="linkedin">
-        </a>
-      </div>
-
-      <div>
-        <a href="https://github.com/vicky-wyq">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_github.svg" alt="github">
-        </a>
-      </div>
-
-      <div>
-        <a href="https://medium.com/@vickywang.design">
-          <img class="image_footer"
-            src="https://s3-us-west-1.amazonaws.com/vickywang.design/Icons_medium.svg" alt="medium">
-        </a>
-      </div>
-    </div>
-
-    <p class="lighter_font">COPYRIGHT &#169; VICKY WANG
+  <div class="footer">
+    <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
     </p>
+    <div class="footer-right">
+      <a href="mailto:vickyw.design@gmail.com">
+        <img class="footer-logo" src="../mail.svg" alt="email">
+      </a>
 
+      <a href="https://www.linkedin.com/in/vicky-wang-6ab7487b/">
+        <img class="footer-logo" src="../in.svg" alt="linkedin">
+      </a>
+
+      <a href="https://github.com/vicky-wyq">
+        <img class="footer-logo" src="../git.svg" alt="github">
+      </a>
+
+      <a href="https://www.instagram.com/vw_yiqi/">
+        <img class="footer-logo" src="../ins.svg" alt="medium">
+      </a>
+    </div>
   </div>
+  <!--footer-->
+
 </body>
 
 </html>
